Archive/47213dc9ac2461d361b7d1607fa553d6-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:4:2: error: 'Thread' does not name a type
  Thread::Thread( Fx&& fx, T0&& arg0, T1&& arg1 ) : 
  ^
main.cpp:7:47: error: expected unqualified-id before ')' token
   thread( [&](){ threadjump(); done = true; } ) {
                                               ^
